@@ -3,10 +3,14 @@ package com.equaled.controller.mcp;
 import com.equaled.controller.mcp.dto.EqualEdToolName;
 import com.equaled.service.IEqualEdServiceV2;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.Map;
+import java.util.Objects;
 
 @Service
 @RequiredArgsConstructor
@@ -15,34 +19,71 @@ public class EqualEdMcpDispatcher {
   private final ObjectMapper mapper;
   private final IEqualEdServiceV2 service;
 
+  /**
+   * Dispatches the tool call to the appropriate handler
+   */
   public Object dispatch(EqualEdToolName name, Map<String, Object> args, String traceId) {
     // Convert untyped args → typed inputs for safety
-    return switch (name) {
-      case GET_STUDENT -> {
-        var in = mapper.convertValue(args, GetStudentInput.class);
-        requireNonEmpty(in.email(), "email");
-        yield service.getUserByEmail(in.email());
-//        yield equalEdService.getStudent(in.email(), traceId);
+      if (Objects.requireNonNull(name) == EqualEdToolName.GET_STUDENT) {
+          GetStudentInput input = mapper.convertValue(args, GetStudentInput.class);
+          requireNonEmpty(input.getEmail(), "email");
+          return service.getUserByEmail(input.getEmail());
+          //return equalEdService.getStudent(input.getEmail(), traceId);
       }
-    };
+      throw new IllegalArgumentException("Unknown tool: " + name);
   }
 
+  /**
+   * Validates that a string field is not empty or blank
+   */
   private void requireNonEmpty(String v, String field) {
-    if (v == null || v.isBlank()) {
+    if (v == null || v.trim().isEmpty()) {
       throw new IllegalArgumentException(field + " is required");
     }
   }
 
-  public record GetStudentInput(String email) {}
+  /**
+   * Typed input for safer mapping and validation
+   */
+  @Data
+  @NoArgsConstructor
+  @AllArgsConstructor
+  public static class GetStudentInput {
+    private String email;
+  }
 
-/*  private void validate(CreateStudentInput in) {
-    requireNonEmpty(in.name(), "name");
-    requireNonEmpty(in.email(), "email");
-  }*/
-
+    /*
+    private void validate(CreateStudentInput in) {
+        requireNonEmpty(in.email(), "email");
+        requireNonEmpty(in.name(), "name");
+    }
+    */
 
   // Typed inputs for safer mapping
-//  public record CreateStudentInput(String name, String email, String grade) {}
-//  public record ListCoursesInput(Integer page, Integer size) {}
-//  public record EnrollStudentInput(String student_id, String course_id) {}
+    /*
+    @Data
+    @NoArgsConstructor
+    @AllArgsConstructor
+    public static class CreateStudentInput {
+        private String name;
+        private String email;
+        private String grade;
+    }
+
+    @Data
+    @NoArgsConstructor
+    @AllArgsConstructor
+    public static class ListCoursesInput {
+        private Integer page;
+        private Integer size;
+    }
+
+    @Data
+    @NoArgsConstructor
+    @AllArgsConstructor
+    public static class EnrollStudentInput {
+        private String student_id;
+        private String course_id;
+    }
+    */
 }
